--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
     
     <div id="Backlog" ondrop="drop(event)" ondragover="allowDrop(event)">
-        <p id="firstp">&nbsp;Backlog-6</p> 
+        <p id="firstp">&nbsp;Backlog</p> 
 
         <!--Multiple divs used for desiging tasks which will traverse along the different slides of the kanban board-->
 
